Criação do arquivo HTML e estrutura do projeto

--- a/index.html
+++ b/index.html
@@ -1,11 +1,48 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Features Pokemon</title>
 </head>
 <body>
     
+<body>
+    <main>
+        <div class=" content">
+          <h1 class="title">Caracteristicas</h1>
+            <ol class="display" id="display">
+                
+                <li class="background">
+                  <div class="top">
+                      <span class="name">nome</span>
+                      <span class="id-pokemon">#0001</span>
+                      <ol class="abilities">
+                        <li class="type">tipo1</li>
+                        <li class="type">tipo2</li>
+                      </ol>
+                      <div class="config-image">
+                        <img src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/other/dream-world/1.svg" alt="">
+                    </div>
+                </div>
+
+                  <div class="bottom" id="bottom">
+                    <span class="about">about</span>
+                    <div class="about-all">
+                        <span class="category">Species<span class="specie">specie</span></span>
+                        <span class="category">Height<span class="height">Height</span></span>
+                        <span class="category">Weight<span class="weight">Weight</span></span>
+                        <span class="category">Abilities<span class="abilities-cat">Abilities</span></span>
+                        <div class="breeding">Breeding</div>
+                        <span class="category">Gender<span class="gender">Gender</span></span> 
+                        <span class="category">Egg Groups<span class="monster">Monster</span></span>
+                        <span class="category">Egg Cycle<span class="gas"> Gas</span></span>
+                    </div>    
+                  </div>
+                </li>  
+            </ol>
+            <button type="button" id="loadMore">Next page...</button>
+        </div>
+    </main>
 </body>
 </html>
