--- a/index.html
+++ b/index.html
@@ -4,7 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Features Pokemon</title>
+    <!--CSS-->
+    <link rel="stylesheet" href="./asserts/css/global.css">
+    <link rel="stylesheet" href="./asserts/css/details.css">
+    <link rel="stylesheet" href="./asserts/css/background-pokemons.css">
 </head>
+
 <body>
     
 <body>
