Implementando a conexão com a Pokemon API usando o método fetch para obter os dados

--- a/index.html
+++ b/index.html
@@ -49,5 +49,6 @@
             <button type="button" id="loadMore">Next page...</button>
         </div>
     </main>
+    <script src="./asserts/js/pokemon-model.js"></script>
 </body>
 </html>
