Criação da classe main e finalizando o projeto

--- a/index.html
+++ b/index.html
@@ -50,5 +50,7 @@
         </div>
     </main>
     <script src="./asserts/js/pokemon-model.js"></script>
+    <script src="./asserts/js/poke-api.js"></script>
+    <script src="./asserts/js/main.js"></script>
 </body>
 </html>
